--- a/main.html
+++ b/main.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <!-- add table here -->
-
+<thead>
+	<th>NAME</th>
+	<th>   KILLS</th>
+	<th>SAVED</th>
+	<th>DEATHS</th>
+	<th>REVIVEWS</th>
+	<th>WIN</th>
+</thead>
         
 </body>
 </html>
